오답노트 기능 완성
기존 미완성이던 오답노트 기능을 구현함

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileTeam1">
         <activity
+            android:name=".AddActivity"
+            android:exported="false" />
+        <activity
             android:name=".note"
             android:exported="false" />
         <activity
